-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b16
Try changing the following
- nonstatic_field(JavaThread, _threadObj, oop) \
+ nonstatic_field(JavaThread, _threadObj, int) \
vmStructs_jvmci.o compiles without any error, even though the wrong type is specified for the given field.
- nonstatic_field(JavaThread, _threadObj, oop) \
+ nonstatic_field(JavaThread, _threadObj, int) \
vmStructs_jvmci.o compiles without any error, even though the wrong type is specified for the given field.